pkg/lang/testdata/ub/config/invalid/locals-var-reference.ub
locals: { region: var.region }

factory: {
  inputs: { region: 'us-east-1' }
}
